# project-vault

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  globals.css  page.tsx
src/app/components/: Modal.tsx
src/components/dashboard/: BalanceCard.tsx  LedgerStream.tsx  MemberGrid.tsx
src/components/layout/: CommandPanel.tsx  Header.tsx  Sidebar.tsx
src/components/modals/: ActionModal.tsx  LogAuditModal.tsx  MemberAuditModal.tsx
src/lib/: db.ts  pdf.ts  utils.ts
src/store/: useVault.ts
