[package]
name = "project-vault"
version = "0.1.0"
description = "Vault by harikahono - Tactical Ledger"
authors = ["harikahono"]
edition = "2021"

[lib]
name = "project_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CRITICAL: Aktifkan fitur sqlite agar plugin bisa baca file .db
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
